Change color theme and fix nav alignment

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -20,7 +20,7 @@ body > header {
   margin: 0;
   nav {
     display: flex;
-    align-items: stretch;
+    align-items: center;
     padding: 0 1rem;
     div:last-child {
       flex-grow: 1;
